+ Most user settings have been made deity only.
+ Updated: templates/forms/settings.tpl

Version 2.6.6
---------------------------------------------------------------------
13 August 2009
+ Graceful recovery from broken authentication scripts.
+ Authorization script made deity only

11 August 2009
+ Fixed default groups on external authentication

7 August 2009
+ Deleted auth scripts will update users under it to use local instead.

23 July 2009
+ The user constructor was trying to load the authorization script on
  failed users. Thanks Verdon.

Version 2.6.5
---------------------------------------------------------------------
9 June 2009
+ Added French and Dutch as language choices
+ Updated conf/languages.php

Version 2.6.4
----------------------------------------------------------------------
+ install.sql was missing default_group column.

Version 2.6.3
-----------------------------------------------------------------------
30 March 2009
+ Added icons for admin options under manage users and groups
+ Disabled active link in groups listing
+ Updated: img/deity.gif, img/delete.png, img/edit.png, man.gif
img/key.png, img/members.png

26 March 2009
+ Authorization scripts now have default group assignments. New
  members will assigned to a group based on their authorization
  method.
+ Removed default group by user or admin from settings.
+ Added ability to view users by whether or not they are in a
  particular group.
+ Updated:
  templates/forms/authorization.tpl
  templates/forms/settings.tpl
  templates/manager/users.tpl

23 March 2009
+ Added pager caching to group listing

10 March 2009
+ Display name may now not be the same as a user name
+ Extended user name error to include display name
+ Added password check to ldap script

Version 2.6.2
-----------------------------------------------------------------------
9 February 2009
+ Moved error file to inc/
+ Blank passwords forbidden.

28 January 2009
+ Error check added to cosign authorization.
