@@ -4,11 +4,12 @@
    * @author Matthew McNaney <mcnaney at gmail dot com>
    */
 $settings = array('default_authorization' => 0,
-                  'new_user_method'       => 2,
+                  'new_user_method'       => 0,
                   'user_menu'             => 'css.tpl',
                   'graphic_confirm'       => 0,
                   'allow_remember'        => 1,
                   'forbidden_usernames'   => "admin\nroot\nwebmaster\nadministrator\neditor",
-                  'local_script'          => 0
+                  'local_script'          => 0,
+                  'allow_new_users'       => 1
                   );
 ?>
