@@ -1,5 +1,7 @@
++ Usernames and passwords can not be changed on non local users
++ Added switch to settings to prevent admins from making new users
 + Most user settings have been made deity only.
-+ Updated: templates/forms/settings.tpl
++ Updated: templates/forms/settings.tpl, templates/forms/userForm.tpl
 
 Version 2.6.6
 ---------------------------------------------------------------------
